♻️ Refactor: 예약 잠금 로직 추가 및 설정 변경 + 불필요 import 제거 (#100)
* :wrench: Chore: Docker Redis 설정 추가

* :wrench: Chore: Redis yml 설정 추가

* :lipstick: Style: 불필요한 import 제거 및 간격 유지

* :lipstick: Style: 불필요한 import 제거 및 사용하지 않는 클래스 삭제

* :wrench: Chore: gitignore jar 추가

* :lipstick: Style: 불필요한 Import 및 공백 제거

* 🐛 Fix: 거리 계산 로직 오류 수정

* :lipstick: Style: 불필요한 Import, 주석 및 클래스 제거

* :lipstick: Style: 불필요한 Import 제거 및 공백 추가

* :sparkles: Feat: 예약 로직에 비관적 락 적용

* ♻️ Refactor: return 값 수정

* :lipstick: Style: 불필요한 import 제거 및 공백 추가

* :lipstick: Style: 불필요한 import 제거

* ♻️Refactor: cors 환경 변수 설정 추가

* ♻️Refactor: 유저 권한 할당 로직 변경

* ♻️Refactor: cors 설정 제거