@@ -3,10 +3,11 @@ package com.snackoverflow.toolgether.global.filter;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
 @AllArgsConstructor
@@ -18,9 +19,20 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // 현재는 권한이 필요 없으므로 빈 리스트 반환
-        return Collections.emptyList();
+        // 사용자에게 ROLE_USER 권한 부여 -> 추후 관리자 기능 추가 시에 동적 권한 할당
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
+
+/*    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        // 사용자 역할에 따라 권한 설정
+        List<GrantedAuthority> authorities = new ArrayList<>();
+        if (userRole.equals("ADMIN")) {
+            authorities.add(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        authorities.add(new SimpleGrantedAuthority("ROLE_USER"));
+        return authorities;
+    }*/
 
     @Override
     public String getPassword() {
